[JBWS-3381] Support AS 7.0.1 / 7.0.2 containers + minor testsuite excludes review
git-svn-id: https://anonsvn.jboss.org/repos/jbossws/stack/native/trunk@15267 50344849-fb0f-0410-a53f-a94597aac05c